tests/ui/coroutine/issue-45729-unsafe-in-coroutine.stderr
error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/issue-45729-unsafe-in-coroutine.rs:6:9
   |
LL |         *(1 as *mut u32) = 42;
   |         ^^^^^^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
